修改说明。