@@ -13,10 +13,10 @@
 ### 使用说明 | instructions
 #### 命令符调用
 支持的命令详见：
-* java -Djava.ext.dirs=./lib -jar btulz.transforms.core-0.1.0.jar code -help
-* java -Djava.ext.dirs=./lib -jar btulz.transforms.core-0.1.0.jar ds -help
-* java -Djava.ext.dirs=./lib -jar btulz.transforms.core-0.1.0.jar sql -help
-* java -Djava.ext.dirs=./lib -jar btulz.transforms.core-0.1.0.jar dsJar -help
+* java -jar btulz.transforms.core-0.1.0.jar code -help    生成代码，详见帮助
+* java -jar btulz.transforms.core-0.1.0.jar ds -help    创建数据结构，详见帮助
+* java -jar btulz.transforms.core-0.1.0.jar sql -help    运行sql命令，详见帮助
+* java -jar btulz.transforms.core-0.1.0.jar dsJar -help    分析jar包处理其中数据结构和sql，详见帮助
 
 
 ### 鸣谢 | thanks
